--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "cli-color": "^2.0.0",
     "cli-progress": "^3.8.2",
     "got": "^11.8.0",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6"
   },
   "devDependencies": {
