--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon index.ts",
+    "start": "ts-node index.ts",
     "build": "tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,10 +26,10 @@
     "cli-progress": "^3.8.2",
     "got": "^11.8.0",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.6"
+    "typescript": "^4.1.2"
   },
   "devDependencies": {
-    "ts-node": "^9.1.0",
-    "typescript": "^4.1.2"
+    "nodemon": "^2.0.6",
+    "ts-node": "^9.1.1"
   }
 }
